--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Merriweather:300,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,700|Merriweather:300,700" rel="stylesheet">
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
@@ -21,83 +21,149 @@
 <body>
 
 <header>
-  <div class="container">
-    <div class="row">
-      <div class="twelve columns">
-        <a href="http://hagerhult.se" title="Go to home.">
-          <svg class="logo" width="560pt" height="26pt" viewBox="59 0 10 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
-            <path class="hagerhult" d="M.861,4.405h4.2c0,3.658,0,3.779,0,5.687h3c2.788,5.119,5.7,10.345,8.438,15.488H11.884C9.954,22,7.965,18.335,6.029,14.758a13.713,13.713,0,0,0-.953-1.626c-.024,4.149,0,8.021,0,12.448H.865c-.088-3.675.043-7.354,0-11.029C.9,11.158.861,4.405.861,4.405Z" transform="translate(-0.677 -3.475)"/>
-            <path class="hagerhult" d="M335.125,4.247h4.2c-.015,1.893-.009,3.788,0,5.683,1-.006,2.011.009,3.015.011,2.835,5.111,5.631,10.362,8.46,15.475h-4.6c-2.314-4.126-4.554-8.39-6.894-12.5v12.5c-1.632,0-2.053,0-4.2,0C335.11,20.855,335.125,4.247,335.125,4.247Z" transform="translate(-263.511 -3.338)"/>
-            <path class="hagerhult" d="M497.672,4.466c1.395,0,2.785,0,4.183,0,0,2.421-.011,3.882,0,5.852,1.039,0,2.075,0,3.113,0,0,.925,0,1.85,0,2.775-1.039,0-2.075-.009-3.113.006-.022,2.555,0,5.113-.009,7.67.023.556.005,1.141.569,1.435.8.325.809.291,2.626.291-.019,1.088.013,2.13,0,3.216a14.793,14.793,0,0,1-5.555-.612,2.7,2.7,0,0,1-1.811-2.6c-.017-3.134,0-6.267-.006-9.4-.855-.006-1.707,0-2.558,0,0-.925,0-1.85,0-2.775.852,0,1.707,0,2.562,0C497.674,8.346,497.672,6.434,497.672,4.466Z" transform="translate(-389.326 -3.464)"/>
-            <path class="hagerhult" d="M473.264,4.757c1.412-.006,2.823,0,4.235,0-.017,7.051,0,14.1,0,21.154-1.412,0-2.824,0-4.237,0C473.275,18.856,473.3,11.806,473.264,4.757Z" transform="translate(-372.144 -3.738)"/>
-            <path class="hagerhult" d="M-4336.587-1322.439h0a7.611,7.611,0,0,1-5.752-2.128,4.631,4.631,0,0,1-1.172-2.75h4.167a2.664,2.664,0,0,0,1.735,1.885,5.317,5.317,0,0,0,1.489.219,3.033,3.033,0,0,0,2.718-1.3,5.579,5.579,0,0,0,.646-3.455c-.009-.368-.019-.729-.007-1.08a5.611,5.611,0,0,1-4.78,2.38,6.563,6.563,0,0,1-3.644-1.075,6.985,6.985,0,0,1-2.731-5.276,8.758,8.758,0,0,1,2.088-7.216,6.167,6.167,0,0,1,4.4-1.768,6.409,6.409,0,0,1,2.6.546,5.188,5.188,0,0,1,1.889,1.706l.171.214v-2.04h3.961q-.01,7.253,0,14.5a6.4,6.4,0,0,1-1.476,4.395,8.149,8.149,0,0,1-6.056,2.235Zm.251-18.413a4.2,4.2,0,0,0-.518.032,3.258,3.258,0,0,0-2.562,2.093,7.188,7.188,0,0,0-.241,3.88,3.627,3.627,0,0,0,2.313,2.9,5.087,5.087,0,0,0,1.026.109,3.377,3.377,0,0,0,1.39-.274,4.114,4.114,0,0,0,2.159-3.553,5.725,5.725,0,0,0-1.109-4.181A3.187,3.187,0,0,0-4336.335-1340.852Z" transform="translate(4373.539 1350.422)"/>
-            <path class="hagerhult" d="M-4336.127-1327.861a12.04,12.04,0,0,1-1.412-.085,7.019,7.019,0,0,1-5.414-3.6c-1.874-3.554-1.2-8.078,1.559-10.522a7.786,7.786,0,0,1,5.246-1.927,8.444,8.444,0,0,1,2.108.266,6.818,6.818,0,0,1,3.966,2.925,9.968,9.968,0,0,1,1.37,5.915l-2.286,0-2.286,0h-2.137q-2.214,0-4.427.016a4.374,4.374,0,0,0,1.32,3.193,4.162,4.162,0,0,0,2.414.742,3.791,3.791,0,0,0,3.5-2l1.827,0,1.826,0a7.684,7.684,0,0,1-2.39,3.654A7.8,7.8,0,0,1-4336.127-1327.861Zm-.015-12.968a9.126,9.126,0,0,0-.975.063,3.465,3.465,0,0,0-2.734,3.22q1.693.008,3.384.008l3.615-.005-.031-.111a4.744,4.744,0,0,0-1.372-2.621A2.87,2.87,0,0,0-4336.142-1340.829Z" transform="translate(4389.255 1350.426)"/>
-            <path class="hagerhult" d="M292.227,31.553a5.107,5.107,0,0,1,4.506-1.27v3.862a4.909,4.909,0,0,0-4.312.831,5.548,5.548,0,0,0-1.389,4.107q-.007,3.394,0,6.792c-1.389-.013-2.778-.006-4.164,0q.006-7.66,0-15.321h3.974v2.857A9.592,9.592,0,0,1,292.227,31.553Z" transform="translate(-225.578 -23.697)"/>
-            <path class="hagerhult" d="M79.886,31.692c1.553,0,3.107.009,4.66,0,1.782,5.1,3.489,10.23,5.273,15.332-1.468,0-2.934-.011-4.4,0-1.1-3.506-2.145-7.029-3.267-10.529-1.205,3.474-2.195,7.025-3.306,10.531-1.855,0-2.014,0-4.158,0C76.427,41.911,78.141,36.8,79.886,31.692Z" transform="translate(-58.732 -24.919)"/>
-            <path class="hagerhult" d="M403.18,32.081q2.106-.006,4.215,0c-.026,2.84,0,5.679-.013,8.519a5.181,5.181,0,0,0,.726,3.139,2.743,2.743,0,0,0,2.517.778,2.668,2.668,0,0,0,2.094-1.152,6.915,6.915,0,0,0,.7-3.609c0-2.56.008-5.117,0-7.677H417.6c-.008,5.106-.019,10.211,0,15.315h-3.968V45.208a8.328,8.328,0,0,1-1.51,1.587,6.791,6.791,0,0,1-5.171.829,4.2,4.2,0,0,1-3-2.094,9.241,9.241,0,0,1-.765-3.852C403.182,38.48,403.208,35.279,403.18,32.081Z" transform="translate(-317.037 -25.225)"/>
-            <path class="hagerhult" d="M544.16,88.807h3.263v3.248H544.16C544.16,90.466,544.143,89.891,544.16,88.807Z" transform="translate(-427.896 -69.815)"/>
-          </svg>
-        </a>
-      </div>
-    </div>
-  </div>
+
 </header>
 
-<section>
+<section class="jumbotron">
   <div class="container">
     <div class="row">
-      <div class="six columns">
+      <div class="three columns offset-by-one">
+        <div class="secondary">
+          <div class="flex">
+        <img class="portrait" src="images/me.jpg" />
+      </div>
+    </div>
+      </div>
+
+      <div class="six columns offset-by-one">
         <div class="main">
           <div class="flex">
             <h1>
               Hi <span class="wave">👋</span>
             </h1>
             <h1>
-              I'm Johan
+              I'm Johan.
             </h1>
             <h5>
-              I'm a <b>user experience designer</b> that
-              enjoys leaving things in a better state than
-              they are when I find them.
+              I make products successful and desirable through research and design.
             </h5>
             <h5>
-              You can find me on <a href="https://www.linkedin.com/in/hagerhult">Linkedin</a>,
-              <a href="https://twitter.com/Hagerhult">Twitter</a> and
+              Reach me on <a href="https://www.linkedin.com/in/hagerhult">Linkedin</a> or
               <a href="https://www.instagram.com/fusion/">Instagram</a>.
             </h5>
           </div>
         </div>
       </div>
-
-      <div class="four columns offset-by-two">
-        <div class="secondary">
-          <h6>Experience</h6>
-
-          <ul>
-            <li>
-              <span class="dates">November 2014 to now</span>
-              <span class="title">User Experience Designer</span>
-              <a href="https://www.visma.com">Visma</a>
-            </li>
-
-            <li>
-              <span class="dates">January 2014 to June 2014</span>
-              <span class="title">User Experience Intern</span>
-              <a href="https://www.verisure.com">Verisure Innovation</a>
-            </li>
-
-            <li>
-              <span class="dates">2012 to 2014</span>
-              <span class="title">B.Sc. Interaction Design</span>
-              <a href="https://www.mah.se/english">Malmö University</a>
-            </li>
-          </ul>
-
-        </div>
-      </div>
     </div>
   </div>
 </section>
+
+<section class="divider-pre">
+  <div class="slope">
+  </div>
+</section>
+
+<section class="projects">
+  <div class="container">
+
+    <div class="row extra-space">
+      <div class="twelve columns">
+        <h6>Projects</h6>
+        A selection of projects I've been invlolved with. I'd love to tell you more if you <a href="https://www.linkedin.com/in/hagerhult">reach out on Linkedin</a>.
+      </div>
+    </div>
+
+    <div class="row">
+
+            <div class="six columns">
+                <a href="./isteveryday.html"><article class="stylist">
+                  <div class="image">
+                  </div>
+                  <div class="tag">
+                    <span class="prio">IST Everyday</span> Design system
+                  </div>
+                  <div class="desc">
+                    Using design to make life easier for students, teachers, parents and administrators by building a design system for Scandinavia’s leading provider of school management software.
+                  </div>
+                </article></a>
+            </div>
+
+            <div class="six columns">
+                <a href="./eaccounting.html"><article class="eaccounting">
+                  <div class="image">
+                  </div>
+                  <div class="tag">
+                    <span class="prio">eAccounting</span> Product line
+                  </div>
+                  <div class="desc">
+                    Tying together breakthroughs in technology, concepts from innovation projects and findings from user research to improve an existing product line with >100.000 users.
+                  </div>
+                </article></a>
+            </div>
+
+    </div>
+    <div class="row">
+
+            <div class="six columns">
+                <a href="./kompanew.html"><article class="kompanew">
+                  <div class="image">
+                  </div>
+                  <div class="tag">
+                    <span class="prio">Kompa.new</span> Mobile app
+                  </div>
+                  <div class="desc">
+                    How can Artificial Intelligence and Machine Learning revolutionize bookkeeping for people on the verge of starting their own company? A strategic innovation project.
+                  </div>
+                </article></a>
+            </div>
+
+            <div class="six columns">
+              <article class="webshop">
+                  <div class="image">
+                  </div>
+                  <div class="tag">
+                    <span class="prio">Visma Website</span> Web app
+                  </div>
+                  <div class="desc">
+                  Making Visma Webshop the worlds most easy to use tool for getting a webshop up and running, empowering a new generation of entrepreneurs in Europe.
+                  </div>
+                </article>
+            </div>
+    </div>
+
+  </div>
+</section>
+
+<section class="divider-post">
+  <div class="slope">
+  </div>
+</section>
+
+<section class="experience">
+  <div class="container">
+
+    <div class="row">
+      <div class="twelve columns">
+        <h6>Experience</h6>
+          The past few years I've had the pleasure of helping some of scandinavias leading IT companies.
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="eight columns offset-by-two">
+        <img src="images/logos.png" />
+      </div>
+    </div>
+  </div>
+
+</section>
+
+<footer>
+  <ul>
+    <li>If you want you can <a target="_blank" rel="noopener noreferrer" href="Hagerhult_Resume.pdf">find my resume here</a>.</li>
+    <li>Have a nice day.</li>
+  </ul>
+</footer>
 
 <script type="text/javascript">
 	  var _gaq = _gaq || [];
