--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="three columns offset-by-one">
         <div class="secondary">
           <div class="flex">
-		<img class="portrait" src="images/me.jpg"></img>
+		<img class="portrait" src="images/me.jpg"/>
       </div>
     </div>
       </div>
