--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <footer>
   <ul>
     <li>If you want you can <a target="_blank" rel="noopener noreferrer" href="Hagerhult_Resume.pdf">find my resume here</a>.</li>
-    <li>Have a nice day.</li>
+    <li>Hosted on github. Have a nice day.</li>
   </ul>
 </footer>
 
