--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="three columns offset-by-one">
         <div class="secondary">
           <div class="flex">
-		<img class="portrait" src="images/me.jpg"/>
+        <img class="portrait" src="images/me.jpg"/>
       </div>
     </div>
       </div>
@@ -49,7 +49,7 @@
             </h5>
             <h5>
               Reach me on <a href="https://www.linkedin.com/in/hagerhult">Linkedin</a> or
-              <a href="https://www.instagram.com/fusion/">Instagram</a>.
+              <a href="https://dribbble.com/snorunge">Dribbble</a>.
             </h5>
           </div>
         </div>
@@ -161,7 +161,7 @@
 <footer>
   <ul>
     <li>If you want you can <a target="_blank" rel="noopener noreferrer" href="Hagerhult_Resume.pdf">find my resume here</a>.</li>
-    <li>Hosted on github. Have a nice day.</li>
+    <li>Have a nice day.</li>
   </ul>
 </footer>
 
