--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         </div>
       </div>
       <div class="four columns copy">
-        <span>You can find my resume <a href="" alt="Link to my resume, will open in a new tab.">here</a>.</span>
+        <span>You can find my resume <a target="_blank" rel="noopener noreferrer" href="Hagerhult_Resume.pdf alt="Link to my resume, will open in a new tab.">here</a>.</span>
       </div>
     </div>
   </div>
