--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 <section class="jumbotron">
   <div class="container">
     <div class="row">
-      <div class="four columns">
+      <div class="three columns offset-by-one">
         <div class="main">
           <div class="flex">
             <img class="portrait" src="images/me.jpg" alt=""/>
           </div>
         </div>
       </div>
-      <div class="seven columns offset-by-one">
+      <div class="seven columns">
         <div class="main">
           <div class="flex">
             <h1>
