--- a/isteveryday.html
+++ b/isteveryday.html
@@ -66,42 +66,37 @@
 <section class="project">
   <div class="container">
 
+
+
     <div class="row">
       <div class="twelve columns">
-          <p><h2>Brief</h2></p>
+          <p><h2>01. The Brief</h2></p>
           <p>IST is Scandinavia’s largest provider of school administration software and have over the years built up a large amount of trust amongst their customers by delivering software helping administrators to fulfill their complex tasks. I got to join the company's Product Management group to see where we could improve the product offering.</p>
-          <p>Through a series of interviews and workshops with principals, administrators, teachers, students and parents we concluded that IST's offering structure would benefit greatly from a larger focus on students, teachers and parents.</p>
+          <p>An administrator’s tasks are often the most crucial, but the actual administrators are quite few. Meanwhile there are millions of users in the form of students, teachers and parents who don't feel the same positive way about IST as the administrators.</p>
       </div>
     </div>
 
     <div class="row extra-space">
       <div class="twelve columns">
-        <img src="./css/stylist.png" />
+        <img src="./css/stylist2.png" />
       </div>
     </div>
 
     <div class="row">
       <div class="twelve columns">
-          <p><h2>Identified problems</h2></p>
-          <p>An administrator’s tasks are often the most crucial, but the actual administrators are quite few. Meanwhile there are millions of users in the form of students, teachers and parents who don't feel the same positive way about IST as the administrators.</p>
-          <p>Another finding was the lack of a unified IST brand. Something that made it confusing to users, but also made the development of functionality slow down as developers often had to make design decisions themselves or wait a long time to get help from one of the limited designers available.</p>
-        </div>
-      </div>
-
-      <div class="row extra-space">
-        <div class="twelve columns">
-          <img src="./css/stylist2.png" />
-        </div>
-      </div>
-
-      <div class="row extra-space">
-        <div class="twelve columns">
-          <p><h2>Outcome</h2></p>
-          <p>We started working on a design system to be used across the organization. By involving the communication department, developers and product owners while we continuously tested our ideas with the different user groups, we aimed to provide a holistic solution covering everything from simple public websites to the complex administration monolith.</p>
-          <p>Work was also started to bring the teacher and student applications into a modern framework and use them as pilots for the design system.</p>
-          <p>This is by far the largest and most scary project I've worked in as the affected userbase is quite large. But the highlight is getting to work more with the strategic parts of product design where it feels like the possibilities to impact a company are endless.</p>
+          <p><h2>02. The Problem</h2></p>
+          <p>Through a series of interviews and workshops with principals, administrators, teachers, students and parents...</p>
       </div>
     </div>
+
+    <div class="row">
+      <div class="twelve columns">
+        <div class="disclaimer wip">
+          🚧 This page is under construction, please come back soon.
+        </div>
+      </div>
+    </div>
+
 
 </section>
 
@@ -178,7 +173,7 @@
         </div>
       </div>
       <div class="four columns copy">
-        <span>You can find my resume <a target="_blank" rel="noopener noreferrer" href="Hagerhult_Resume.pdf" alt="Link to my resume, will open in a new tab.">here</a>.</span>
+        <span>You can find my resume <a href="" alt="Link to my resume, will open in a new tab.">here</a>.</span>
       </div>
     </div>
   </div>
