--- a/kompanew.html
+++ b/kompanew.html
@@ -65,7 +65,7 @@
 
     <div class="row">
       <div class="twelve columns">
-        <p><h2>Background</h2></p>
+        <p><h2>01. The Brief</h2></p>
           <p>I spent my first two years after graduation working with general usability improvements and user testing in Vismas legacy products. But after proving myself and learning a lot about working with UX in the real world I got the chance to work in a innovation project to try to predict the future of bookkeping to help Visma stay relative in the field for many years to come.</p>
       </div>
     </div>
@@ -78,28 +78,29 @@
 
     <div class="row">
       <div class="twelve columns">
-        <p><h2>The pitch</h2></p>
+        <p><h2>02. The Problem</h2></p>
           <p>In Scandinavia bookkeeping follows a very strict set of rules that is easy to automate. The time-consuming work is the manual entry of your sales and purchases. By automating those flows we discovered that we could free up a majority of the time spent on bookkeeping. This allowed our users to spend time on other things, like growing their sales, or spending it with their beloved ones.</p>
-      </div>
-    </div>
-
-    <div class="row extra-space">
-      <div class="eight columns offset-by-two">
-        <img src="./css/1.png" />
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="twelve columns">
-        <p><h2>The result</h2></p>
-          <p>During the two years I spent working on the Kompanew project I got the chance to hold several stakeholder workshops, a lot of them following a Design Sprint process. I finally got to work with mobile apps, a long-term goal of mine, and I got firsthand experience working close with developers with Machine learning, AI and chatbots, something that I had only been able to dream about working with before.</p>
-          <p>The findings from the Kompanew innovation project were decided to be implemented in the existing product line thanks to the positive response from out user base.</p>
       </div>
     </div>
 
     <div class="row extra-space">
       <div class="twelve columns">
         <img src="./css/2.png" />
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="twelve columns">
+        <p><h2>03. The Process</h2></p>
+        <p>During the two years I spent working on the Kompanew project I got the chance to host several Design Sprints with the stakeholders...</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="twelve columns">
+        <div class="disclaimer locked">
+          🔒 Please reach out for more details about this project.
+        </div>
       </div>
     </div>
 
@@ -177,7 +178,7 @@
         </div>
       </div>
       <div class="four columns copy">
-        <span>You can find my resume <a target="_blank" rel="noopener noreferrer" href="Hagerhult_Resume.pdf" alt="Link to my resume, will open in a new tab.">here</a>.</span>
+        <span>You can find my resume <a href="" alt="Link to my resume, will open in a new tab.">here</a>.</span>
       </div>
     </div>
   </div>
