--- a/eaccounting.html
+++ b/eaccounting.html
@@ -45,7 +45,7 @@
               Your economy on autopilot.
             </h1>
             <p>
-              Tying together breakthroughs in technology, concepts from innovation projects and findings from user research to improve an existing product line with >100.000 users.
+              Highlighting the potential of a 1-star app with a frustrated userbase of over 100.000 people, and developers that didn't dare to meet them.
             </p>
             <span class="label">
               UX Design
@@ -65,8 +65,9 @@
 
     <div class="row">
       <div class="twelve columns">
-        <p><h2>Brief</h2></p>
+        <p><h2>01. The Brief</h2></p>
         <p>eAccounting is one of Vismas most popular products with more than 100 000 users. I joined the team to implement findings from an innovation project I had been involved in, but soon got free hands to help improve the whole user experience of their mobile apps.</p>
+        <p>The inital states of the apps wasn't great, while the apps worked well they looked and felt outdated. The team had also been without a dedicated UX:er for quite some time. The only users leaving reviews on them were frustrated with a steep learning curve and lack of functionality leaving a negative feeling towards them from some of the developers.</p>
       </div>
     </div>
 
@@ -78,9 +79,23 @@
 
     <div class="row">
       <div class="twelve columns">
-        <p><h2>Work</h2></p>
-          <p>An early goal of mine was to get the team behind the apps out of the office to meet actual users. We quickly discovered that users running a basic company were quite happy with the apps, but users with more advanced requirements found them lacking functionality. These users formed a substantial part of our userbase.</p>
-          <p>A review of the comments that were received on Apple Appstore, Google Play Store and the feedback functionality built into the apps confirmed these findings, and we ended up with a prioritized list of the most important missing features.</p>
+          <p><h2>02. The Problem</h2></p>
+          <p>An early goal of mine was to get the team behind the apps out of the office to meet actual users. By doing this it quickly became obvious that users running a basic company were quite happy with the apps, but users with more advanced requirements found them lacking functionality. These users formed a substantial part of our userbase. I think it this was the most important part of the project as it bridged the gap between developers and users. We could see that a lot of the work that had been put into the app was appreciated, and got an understanding for the angry reviews as well.</p>
+          <p>A review of the comments that were received on Appstore, Play Store and the feedback functionality built into the apps confirmed these findings, and we ended up with a prioritized list of the most important missing features as well as some hard to use functionality.</p>
+        </div>
+      </div>
+
+      <div class="row extra-space">
+        <div class="twelve columns">
+          <h1>"When I first saw the app I thought YES! But it lacks too much functionality to be usable."
+        </div>
+      </div>
+
+      <div class="row extra-space">
+        <div class="twelve columns">
+          <p><h2>03. The Process</h2></p>
+          <p>In the eAccounting project I got to continue working on mobile design in both the Android and iOS ecosystems. I also got to redesign how we present those apps on Apple Appstore and Google Play Store together with the marketing department, focusing on fun and lively screenshots combined with short and to the point copy.</p>
+          <p>We introduced a lot of new functionality in the app that was higly requested, but actually managed to decrease the number of navigation items. This was done by building a dashboard on the startpage that contained some of the features, and by combining other features into the same menu item. All of these changes were prototyped and well recieved with the userbase, reassuring us that we were on the right track.</p>
         </div>
       </div>
 
@@ -92,8 +107,41 @@
 
       <div class="row extra-space">
         <div class="twelve columns">
-        <p><h2>Outcome</h2></p>
-          <p>In the eAccounting project I got to continue working on mobile design in both the Android and iOS ecosystems. I also got to redesign how we present those apps on Apple Appstore and Google Play Store together with the marketing department, focusing on fun and lively screenshots combined with short and to the point copy.</p>
+          <p><h2>04. The Outcome</h2></p>
+          <p>When we started the eAccounting app had an AppStore rating of <b>1.4/5</b> and an NPS score of <b>4/10</b>. When I left the team the AppStore rating had increased to <b>4.4</b> and the NPS from the internal feedback tool was up to <b>7.9</b>. A big improvement, but we hope it will continue to increase.</p>
+          <p>Here are some reviews (translated from swedish) that we got after releasing some of our biggest improvements:</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="four columns review">
+        <h2>Very sleek!
+          <br>
+          <span class="rating">★★★★★</span>
+        </h2>
+        Good design and easy to understand.
+        <span class="author">Stefan</span>
+      </div>
+      <div class="four columns review">
+        <h2>👍
+          <br>
+          <span class="rating">★★★★☆</span>
+        </h2>
+        Appreciate the new tax functionality, now I can use only the app without any other services.
+        <span class="author">Emil</span>
+      </div>
+      <div class="four columns review">
+        <h2>Very easy and functional
+          <br>
+          <span class="rating">★★★★☆</span>
+        </h2>
+        I've used the app for several years and it's a very convenient solution for entrepreneurs.
+        <span class="author">Shalle</span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="twelve columns">
+        <p>Do you want to know more about this project? Please reach out to me.</p>
       </div>
     </div>
 
@@ -172,7 +220,7 @@
         </div>
       </div>
       <div class="four columns copy">
-        <span>You can find my resume <a target="_blank" rel="noopener noreferrer" href="Hagerhult_Resume.pdf" alt="Link to my resume, will open in a new tab.">here</a>.</span>
+        <span>You can find my resume <a href="" alt="Link to my resume, will open in a new tab.">here</a>.</span>
       </div>
     </div>
   </div>
