--- a/kompanew.html
+++ b/kompanew.html
@@ -143,7 +143,7 @@
       <div class="eight columns presentation">
         <div class="flex">
           <h1>Your economy on autopilot.</h1>
-          <span>Tying together breakthroughs in technology, concepts from innovation projects and findings from user research to improve an existing product line with >100.000 users.</span>
+          <span>Highlighting the potential of a 1-star app with a frustrated userbase of over 100.000 people, and developers that didn't dare to meet them.</span>
           <div class="readmore">
             <a href="eaccounting.html" class="button-outlined" alt="Read more about Eaccounting">Read more</a>
           </div>
