--- a/eaccounting.html
+++ b/eaccounting.html
@@ -24,7 +24,7 @@
   <div class="container">
     <div class="row">
       <div class="twelve columns">
-        <a href="index.html">hagerhult</a>
+        <a href="index.html">hagerhult.</a>
 
         <nav>
           <a href="index.html#work">work</a>
@@ -73,7 +73,7 @@
 
     <div class="row extra-space">
       <div class="eight columns offset-by-two">
-        <img src="./css/appstore1.png" />
+        <img src="./images/appstore1.png" />
       </div>
     </div>
 
@@ -101,7 +101,7 @@
 
       <div class="row extra-space">
         <div class="eight columns offset-by-two">
-          <img src="./css/appstore2.png" />
+          <img src="./images/appstore2.png" />
         </div>
       </div>
 
