--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
   <link rel="icon" type="image/png" href="images/favicon.ico">
 
 </head>
+
 <body>
 
-<header>
+<header class="jumbotron">
+  <div class="portrait">
+  </div>
   <div class="container">
     <div class="row">
       <div class="twelve columns">
-        <a href="index.html">hagerhult</a>
+        <a href="index.html">hagerhult.</a>
 
         <nav>
           <a href="#work">work</a>
@@ -32,19 +35,7 @@
         </nav>
       </div>
     </div>
-  </div>
-</header>
-
-<section class="jumbotron">
-  <div class="container">
     <div class="row">
-      <div class="three columns offset-by-one">
-        <div class="main">
-          <div class="flex">
-            <img class="portrait" src="images/me.jpg" alt=""/>
-          </div>
-        </div>
-      </div>
       <div class="seven columns">
         <div class="main">
           <div class="flex">
@@ -58,38 +49,19 @@
 
             </p>
             <p>
-                Currently reimagining schools at <a href="">IST</a>.
+                Currently reimagining schools @ <a href="https://www.ist.com/en" alt="Go to the IST Group website">IST</a>.
             </p>
           </div>
         </div>
       </div>
     </div>
   </div>
-</section>
+</header>
 
 <div id="work">
 </div>
 
-<section class="isteveryday">
-  <div class="container">
-    <div class="row">
-      <div class="six columns presentation">
-        <div class="flex">
-          <h1>A school for everyone.</h1>
-          <span>Using design to make life easier for students, teachers, parents and administrators by building a design system for Scandinavia’s leading provider of school management software.</span>
-          <div class="readmore">
-            <a href="isteveryday.html" class="button-outlined" alt="Read more about IST Everyday">Read more</a>
-          </div>
-        </div>
-      </div>
-      <div class="six columns photo">
-        <div class="flex">
-          <img src="images/stylist-3.png">
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+
 
 <section class="kompanew">
   <div class="container">
@@ -127,6 +99,27 @@
       <div class="six columns photo">
         <div class="flex">
           <img src="images/eaccounting.png">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="isteveryday">
+  <div class="container">
+    <div class="row">
+      <div class="six columns presentation">
+        <div class="flex">
+          <h1>A school for everyone.</h1>
+          <span>Using design to make life easier for students, teachers, parents and administrators by building a design system for Scandinavia’s leading provider of school management software.</span>
+          <div class="readmore">
+            <a href="isteveryday.html" class="button-outlined" alt="Read more about IST Everyday">Read more</a>
+          </div>
+        </div>
+      </div>
+      <div class="six columns photo">
+        <div class="flex">
+          <img src="images/stylist-3.png">
         </div>
       </div>
     </div>
