--- a/isteveryday.html
+++ b/isteveryday.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="row">
         <div class="twelve columns">
-          <a href="index.html">hagerhult</a>
+          <a href="index.html">hagerhult.</a>
 
           <nav>
             <a href="index.html#work">work</a>
@@ -34,9 +34,6 @@
       </div>
     </div>
   </header>
-
-
-
 
 <section class="isteveryday">
   <div class="container">
@@ -78,7 +75,7 @@
 
     <div class="row extra-space">
       <div class="twelve columns">
-        <img src="./css/stylist2.png" />
+        <img src="./images/stylist2.png" />
       </div>
     </div>
 
