--- a/kompanew.html
+++ b/kompanew.html
@@ -24,7 +24,7 @@
   <div class="container">
     <div class="row">
       <div class="twelve columns">
-        <a href="index.html">hagerhult</a>
+        <a href="index.html">hagerhult.</a>
 
         <nav>
           <a href="index.html#work">work</a>
@@ -72,7 +72,7 @@
 
     <div class="row extra-space">
       <div class="twelve columns">
-        <img src="./css/showcase.png" />
+        <img src="./images/showcase.png" />
       </div>
     </div>
 
@@ -85,7 +85,7 @@
 
     <div class="row extra-space">
       <div class="twelve columns">
-        <img src="./css/2.png" />
+        <img src="./images/2.png" />
       </div>
     </div>
 
@@ -115,24 +115,6 @@
     </div>
   </div>
 
-  <div class="container moreprojects isteveryday">
-    <div class="row">
-      <div class="three columns photo">
-        <div class="flex">
-          <img src="images/stylist-3.png">
-        </div>
-      </div>
-      <div class="eight columns presentation">
-        <div class="flex">
-          <h1>A school for everyone.</h1>
-          <span>Using design to make life easier for students, teachers, parents and administrators by building a design system for Scandinavia’s leading provider of school management software.</span>
-          <div class="readmore">
-            <a href="isteveryday.html" class="button-outlined" alt="Read more about IST Everyday">Read more</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="container moreprojects eaccounting">
     <div class="row">
       <div class="three columns photo">
@@ -151,6 +133,26 @@
       </div>
     </div>
   </div>
+
+  <div class="container moreprojects isteveryday">
+    <div class="row">
+      <div class="three columns photo">
+        <div class="flex">
+          <img src="images/stylist-3.png">
+        </div>
+      </div>
+      <div class="eight columns presentation">
+        <div class="flex">
+          <h1>A school for everyone.</h1>
+          <span>Using design to make life easier for students, teachers, parents and administrators by building a design system for Scandinavia’s leading provider of school management software.</span>
+          <div class="readmore">
+            <a href="isteveryday.html" class="button-outlined" alt="Read more about IST Everyday">Read more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </section>
 
 <footer id="contact">
