--- a/kompanew.html
+++ b/kompanew.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600" rel="stylesheet">
 
