--- a/eaccounting.html
+++ b/eaccounting.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600" rel="stylesheet">
 
@@ -73,7 +73,7 @@
 
     <div class="row extra-space">
       <div class="eight columns offset-by-two">
-        <img src="./images/appstore1.png" />
+        <img src="./images/ea1.png" />
       </div>
     </div>
 
@@ -101,7 +101,7 @@
 
       <div class="row extra-space">
         <div class="eight columns offset-by-two">
-          <img src="./images/appstore2.png" />
+          <img src="./images/ea2.png" />
         </div>
       </div>
 
