--- a/kompanew.html
+++ b/kompanew.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600" rel="stylesheet">
 
@@ -119,7 +119,7 @@
     <div class="row">
       <div class="three columns photo">
         <div class="flex">
-          <img src="images/eaccounting.png">
+          <img src="images/appstore.png">
         </div>
       </div>
       <div class="eight columns presentation">
